# flatbuffers-language-server

./: .clangd  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  design.md  design02.md  design03.md  design04.md  design05.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: analysis.rs  document_store.rs  ffi.rs  lib.rs  lsp_logger.rs  main.rs  parser.rs  search_path_manager.rs  server.rs  symbol_table.rs  workspace.rs  workspace_layout.rs
src/analysis/: dependency_graph.rs  diagnostic_store.rs  mod.rs  root_type_store.rs  snapshot.rs  symbol_index.rs  workspace_index.rs
src/cpp/: wrapper.cpp  wrapper.h
src/cpp/patched_flatbuffers/: idl_parser.cpp
src/diagnostics/: codes.rs  duplicate_definition.rs  expecting_token.rs  generic.rs  mod.rs  semantic.rs  snake_case_warning.rs  undefined_type.rs
src/ext/: all_diagnostics.rs  did_save_sync.rs  duration.rs  mod.rs  range.rs  sync.rs
src/handlers/: code_action.rs  completion.rs  goto_definition.rs  hover.rs  lifecycle.rs  mod.rs  references.rs  rename.rs  workspace_symbol.rs
src/handlers/completion/: attributes.rs  field_type.rs  keyword.rs  mod.rs  root_type.rs  rpc_method.rs  util.rs
src/utils/: mod.rs  parsed_type.rs  paths.rs  type_utils.rs
tests/integration/: code_action.rs  completion.rs  diagnostics.rs  graceful_errors.rs  harness.rs  helpers.rs  hover.rs  include_paths.rs  main.rs  references.rs  rename.rs  scenarios.rs  test_logger.rs  workspace.rs  workspace_layout.rs  workspace_symbol.rs
tests/integration/analyzer/: diagnostic_store.rs  mod.rs  root_type_store.rs  (+2 more)
(+51 files in other folders)
