[package]
name = "flatbuffers-language-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.4.0"
log = { version = "0.4", features = ["std"] }
regex = "1.5"
tempfile = "3.3"
once_cell = "1.10"
pathdiff = "0.2.1"
ropey = "1.3"
heck = "0.5.0"

[build-dependencies]
cc = "1.0"
bindgen = "0.60"

[dev-dependencies]
insta = { version = "1.34.0", features = ["serde"] }

[[test]]
name = "integration"
path = "tests/integration/main.rs"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
